--- a/src/App/index.less
+++ b/src/App/index.less
@@ -1,10 +1,12 @@
-h1 {
-    font-size: 30px;
-    line-height: 36px;
-    font-weight: 800;
+.main {
+    display: flex;
 }
 
-.main {
-    background-color: white;
-    color: @color1;
+.menu {
+    flex-shrink: 1;
+}
+
+.content {
+    flex-grow: 1;
+    padding: @paddingLg;
 }
